# rust_personal_learning

./: Cargo.toml  Dockerfile  docker-compose.yml  sqlx-com.txt  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221117104029_create_subscriptions_table.sql  20230715225324_make_status_not_null_transaction.sql  20230715230611_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  greet.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: test_api.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
